# py-data-project

./: README.md  pyproject.toml
apps/: streamlit_app.py
apps/pages/: 01_Executive_Summary.py  02_Real_time_Monitor.py  03_Strategic_Overview.py  04_Financial_Performance.py  05_Growth_Analytics.py  06_Revenue_Trend_Analysis.py  07_Category_Performance.py  08_Geographic_Revenue.py  09_Festival_Sales_Analytics.py  10_Price_Optimization.py  11_Customer_Segmentation.py  12_Customer_Journey.py  13_Prime_Analytics.py  14_Customer_Retention.py  15_Demographics_Behavior.py  16_Product_Performance.py  17_Brand_Analytics.py  18_Inventory_Optimization.py  19_Product_Rating_Review.py  20_New_Product_Launch.py  21_Delivery_Performance.py  22_Payment_Analytics.py  23_Return_Cancellation.py  24_Customer_Service.py  25_Supply_Chain.py  26_Predictive_Analytics.py  27_Market_Intelligence.py  28_Cross_Sell_Upsell.py  29_Seasonal_Planning.py  30_Command_Center.py
configs/: cleaning_amazon_catalog.json  cleaning_transactions_amazon_india.json
db/: schema.postgres.sql
notebooks/: eda_analysis.ipynb
scripts/: batch_clean.py  init_db_pg.py  load_products_pg.py  load_to_db_pg.py  migrate_add_category_brand_pg.py  run_cleaning.py
src/data_pipeline/: config.py  db_pg_utils.py  pd_pipeline.py
src/data_pipeline/bi/: db.py
