[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-pipeline"
version = "0.1.0"
readme = "README.md"
authors = ["Your Team <you@example.com>"]
keywords = ["data", "cleaning", "analytics", "streamlit", "postgres", "pandas"]
description = "Pandas cleaning + EDA + Postgres analytics + Streamlit BI"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.3.2",
  "matplotlib>=3.6",
  "seaborn>=0.12",
  "psycopg2-binary>=2.9",
  "streamlit>=1.31",
  "plotly>=5.18",
  "statsmodels>=0.13"
]
